# xVMP

xVMP_plugin/: CMakeLists.txt
xVMP_plugin/include/: vm.h  xVMP.h
xVMP_plugin/src/: xVMP.cpp
